@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-09T00:51:05Z",
-  "count_outdated" : 1427,
-  "uniques_outdated" : 948,
-  "count" : 1438,
-  "uniques" : 959,
+  "timestamp" : "2025-10-10T00:50:29Z",
+  "count_outdated" : 1428,
+  "uniques_outdated" : 949,
+  "count" : 1440,
+  "uniques" : 961,
   "clones" : [
-    {
-      "timestamp": "2025-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-27T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-09T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
