@@ -1,3 +1,12 @@
+2025-10-10T00:50:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18393136557 # 792
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-10
+* notice: last 14d: unq all: 4 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 948 1427 / 959 1438
+* notice: next accum: outdated-unq outdated-all / unq all: 949 1428 / 961 1440
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-09-26] / [2025-10-09]
+
 2025-10-09T00:51:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18362105536 # 791
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-09
